# scirag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy-cloudrun.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docker/: entrypoint.sh  supervisord.conf
docs/: MCP_SERVER_SPEC.md  VECTOR_SEARCH_QUICK_START.md  ravendb_vector_search_setup.md
documents/: .gitkeep
src/scirag/: __init__.py  constants.py
src/scirag/client/: __init__.py  app.py  cli.py  cli_helpers.py  ingest.py
src/scirag/client/routes/: __init__.py  chat.py  config.py  health.py  pages.py  upload.py
src/scirag/client/static/: app.js  style.css
src/scirag/client/templates/: chat.html  upload.html
src/scirag/llm/: __init__.py  base.py  factory.py  gemini.py  ollama.py  providers.py
src/scirag/service/: __init__.py  database.py  llm_services.py  mcp_helpers.py  mcp_server.py
src/scirag/service/database/: __init__.py  config.py  models.py  operations.py  storage.py  utils.py
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_database.py  test_fixtures.py  test_ingest.py  test_integration_e2e.py  test_llm_services.py  test_mcp_helpers.py  test_mcp_server.py  test_structure.py
tests/fixtures/: README.md  sample_embeddings.json  test_chunks.json
