[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scirag"
version = "0.1.0"
description = "An agentic Retrieval-Augmented Generation (RAG) application for scientific documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD 3-Clause License"}
authors = [
    {name = "Mathieu Doucet", email = "doucetm@ornl.gov"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ravendb>=7.1.2",
    "fastmcp>=0.1.0",
    "flask>=3.0.0",
    "PyMuPDF>=1.23.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "click>=8.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
scirag-ingest = "scirag.client.cli:ingest"
scirag-count = "scirag.client.cli:count"
scirag-search = "scirag.client.cli:search"
scirag-delete-db = "scirag.client.cli:delete_db"
scirag-mcp-server = "scirag.service.mcp_server:main"
scirag-app = "scirag.client.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=scirag --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "ignore::RuntimeWarning:.*coroutine.*was never awaited",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "requires_ollama: marks tests that require Ollama server to be running",
    "requires_ravendb: marks tests that require RavenDB server to be running",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
